analysis örneklem sayısını yazdır

--- a/data-analysis.ipynb
+++ b/data-analysis.ipynb
@@ -3755,7 +3755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3764,7 +3764,17 @@
      "text": [
       "Örneklem Sayısı: 331\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(\"Örneklem Sayısı:\", len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -3890,13 +3900,12 @@
        "4  0.003423  0.003434  17.9891971160312  17.9459427351924   < 00:01  28.22  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Örneklem Sayısı:\", len(df))\n",
     "df.head()"
    ]
   },
